-BeOS
  * Timeout control is unavaiable under BeOS due to its implementation of
  sockets. BeOS support select() only when reading and not for writing or
  exceptions. This will change when BONE is officially released.
  * SOCK_RAW is not supported under BeOS.
-Linux
  * RAW Sockets can only be used under Linux when SUID is ROOT.

Future Work:
  - A multi-threaded TCP server class.

Change Log:
 02/19/2002 Dan Tomalesky <grim@xynesis.com>
    -changed socketbuf(int, unsigned, unsigned) to have variable names
     so it is easier to read in the declaration.
    -Added License header into skstream.h
    -Added cppunit test class and Auto* for supporting it. 
       (doesn't do anything yet)
 01/07/2002 Krystian G Bates
	Removed the code in socketbuf::sync() that caused both input and output 
	buffers to be emptied on `<< flush'
 01/09/2001 - RGJ
    Added the function timeout(), which returns true if a timeout has occured.
    It also clears the state bits of the stream so it can send/received after
    a timeout is detected. If badbit is set, the stream still cannot send and/or
    receive.
 12/28/2000 - RGJ
    FreeSockets version 0.3 released under GNU LGPL License.
 11/27/2000 - RGJ
    Changed constructors of nearly all classes.
    Now the size of the buffers may be defined.
    Added support for RAW sockets.
 11/24/2000 - RGJ
    Added a namespace (FreeSockets) to hold:
      - Enumeration IP_Services: define common IP ports used.
      - Enumeration IP_Protocols: define some avaiable protocols.
 11/23/2000 - RGJ
    Class hierarchy was redesigned.
    Version 0.2 released.
  9/20/2000 - RGJ
    Added support for UDP server sockets .
    Added a stream manipulator to set remote host.
  9/15/2000 - RGJ
    Added support for client UDP sockets.
  8/24/2000 - RGJ
    Added timeout control using select().
  8/23/2000 - RGJ
    Completed port to BSD Sockets(*NIX).
  8/3/2000 - RGJ
    Added support for server sockets.